# proj_589

./: .gitignore  README.md  install_test.ipynb  main.py  pyproject.toml
examples/: .env  Navier_Stokes_inverse.py
